# NCSU-Exam-Calendar

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  build_all.bash  optimize.bash
.github/workflows/: binaries.yml  cargo-tag.yml  clippy.yml  github-pages-build.yml  github-pages.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
desktop/: Cargo.toml  Dioxus.toml
desktop/src/: main.rs
docs/: exams.json  index.html  tailwind.css
docs/assets/dioxus/: ncsu_exam_web.js
docs/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
ncsu_cal_lib/: Cargo.toml
ncsu_cal_lib/src/: calendar.rs  lib.rs
ncsu_cal_lib/src/gui/: mod.rs
src/: calendar.rs  cli.rs  desktop.rs  lib.rs  web.rs
src/gui/: mod.rs
web/: Cargo.toml  Dioxus.toml  optimize.bash
web/src/: main.rs
