[package]
name = "ncsu_exam_calendar"
version = "0.1.0"
edition = "2021"
default-run = "ncsu_exam_web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[lib]
name = "ncsu_exam_lib"
path = "src/lib.rs"

[[bin]]
name = "ncsu_exam_cli"
path = "src/cli.rs"

[[bin]]
name = "ncsu_exam_desktop"
path = "src/desktop.rs"
required-features = ["desktop"]

[[bin]]
name = "ncsu_exam_web"
path = "src/web.rs"
required-features = ["web"]

[features]
default = ["dioxus"]
dioxus = ["dep:dioxus"]
multi-thread = ["tokio/rt-multi-thread"]
desktop = ["multi-thread", "dioxus", "dep:dioxus-desktop"]
web = ["dioxus", "dep:dioxus-web", "dep:web-sys", "dep:wasm-bindgen"]

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
dateparser = "0.2.1"
dioxus = { version = "0.4.0", optional = true }
dioxus-desktop = { version = "0.4.0", optional = true }
dioxus-logger = "0.4.1"
dioxus-use-request = "0.1.5"
dioxus-web = { version = "0.4.0", optional = true }
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.2"
reqwest = "0.11.22"
select = "0.6.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "macros"] }
wasm-bindgen = { version = "0.2.88", optional = true }
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3.65", optional = true }
