[workspace.package]
version = "0.1.59"
edition = "2021"
description = "A search tool for the NCSU exam calendar"

authors = ["Bennett Petzold", "dansecob . dev @ gmail.com"]
license = "GPL-2.0-or-later"
homepage = "https://bennett-petzold.github.io/NCSU-Exam-Calendar/"
keywords = ["NCSU"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"ncsu_cal_lib",
	"cli",
	"web",
	"desktop"
]
resolver = "2"

[workspace.dependencies]
dioxus = "0.4.0"
dioxus-logger = "0.4.1"
log = "0.4.20"
tokio = "1.34.0"
serde_json = "1.0.108"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
