[package]
name = "ncsu_exam_calendar_desktop"
version.workspace = true
edition.workspace = true
description.workspace = true

authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true

[features]
bundle = []

[dependencies]
ncsu_cal_lib = { path = "../ncsu_cal_lib", features = ["desktop"] }
dioxus = { workspace = true }
dioxus-desktop = "0.4.0"
dioxus-logger = { workspace = true }
log = { workspace = true }
