[package]
name = "ncsu_cal_lib"
version.workspace = true
edition.workspace = true
description.workspace = true

authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true

[features]
default = ["dioxus"]
dioxus = ["dep:dioxus"]
multi-thread = ["tokio/rt-multi-thread"]
desktop = ["multi-thread", "dioxus"]
web = ["dioxus", "dep:web-sys", "dep:wasm-bindgen"]

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
dateparser = "0.2.1"
dioxus = { workspace = true, optional = true }
dioxus-logger = { workspace = true }
dioxus-use-request = "0.1.5"
dioxus-web = { version = "0.4.0", optional = true }
itertools = "0.12.0"
lazy_static = "1.4.0"
log = { workspace = true }
regex = "1.10.2"
reqwest = "0.11.22"
select = "0.6.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { workspace = true }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { workspace = true, features = ["rt", "macros"] }
wasm-bindgen = { version = "0.2.88", optional = true }
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3.65", optional = true }
